[package]
name = "thin_str"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"
keywords = ["thin", "thin_str", "thinstr", "box", "string", "no_std"]
categories = ["data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/thomcc/thin_str"
description = "A thinner `Box<str>` (1 pointer in size)"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
serde_support = ["serde"]

[dependencies]
serde = {version = "1", optional = true, default_features = false}

[dev-dependencies]
serde_test = "1"
