[package]
name = "thin_str"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
keywords = ["thin", "thinstr", "box", "string", "no_std"]
categories = ["data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/thomcc/thin_str"
description = "A string type that's smaller than `Box<str>` or String"
license = "MIT/Apache-2.0"
readme = "README.md"

[badges]
circle-ci = { repository = "thomcc/thin_str", branch = "master" }

[features]
default = []
serde_support = ["serde"]

[dependencies]
serde = {version = "1", optional = true, default_features = false}

[dev-dependencies]
serde_test = "1"
